--- a/style.css
+++ b/style.css
@@ -18,8 +18,14 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  margin: 0.4em auto;
-  margin-right: 5vw;
+  margin: 0 auto;
+  padding-right: 5vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: whitesmoke;
+  box-shadow: 0px 0px 5px rgb(71, 71, 71);
 }
 
 header ul li {
@@ -38,7 +44,7 @@ header ul li {
   align-items: center;
   justify-content: center;
   background-color: rgb(172, 112, 84);
-  color: white;
+  color: whitesmoke;
   text-shadow: 0px 0px 5px rgb(71, 71, 71);
 }
 
@@ -49,7 +55,7 @@ header ul li {
 }
 
 .cta button {
-  color: white;
+  color: whitesmoke;
   border: none;
   border-radius: 5px;
   padding: 15px;
