--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   color: rgb(68, 66, 66);
   font-size: clamp(1rem, 1.1vw, 2rem);
+  /* font-family: "Lato", Helvetica, sans-serif; */
   overflow-x: hidden;
 }
 
@@ -55,7 +56,9 @@ header ul li {
   align-items: center;
   justify-content: center;
   background-color: rgb(172, 112, 84);
+  background: url("images/baniere.jpg") no-repeat center/cover;
   text-shadow: 0px 0px 5px rgb(71, 71, 71);
+  text-shadow: 0px 0px 5px hsl(0, 0%, 10%);
 }
 
 #bandeau-accueil h2 {
