--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@ body {
   background-color: whitesmoke;
   margin: 0;
   color: rgb(68, 66, 66);
-  font-size: clamp(1rem, 1.1vw, 2rem);
+  font-size: clamp(1rem, 1vw, 2rem);
   /* font-family: "Lato", Helvetica, sans-serif; */
   overflow-x: hidden;
 }
 
 .big-title {
-  font-size: clamp(2.5rem, 2.8vw, 4rem);
+  font-size: clamp(2.5rem, 2.6vw, 4rem);
   font-weight: 900;
   letter-spacing: 0.05em;
   text-align: center;
@@ -55,36 +55,50 @@ header ul li {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(172, 112, 84);
   background: url("images/baniere.jpg") no-repeat center/cover;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3);
   text-shadow: 0px 0px 5px rgb(71, 71, 71);
-  text-shadow: 0px 0px 5px hsl(0, 0%, 10%);
+  text-shadow: 2px 2px 7px hsl(0, 0%, 10%);
+}
+
+#bandeau-accueil:hover {
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
 }
 
 #bandeau-accueil h2 {
-  font-size: clamp(2.5rem, 3.5vw, 4rem);
-  font-weight: 900;
+  font-size: clamp(2.5rem, 4.7vw, 4.5rem);
   letter-spacing: 0.05em;
+  color: white;
 }
 
 .cta button {
   color: whitesmoke;
   border: none;
   border-radius: 5px;
-  padding: 15px;
+  padding: 15px 20px;
   font-size: clamp(1rem, 1vw, 2rem);
-  box-shadow: 0px 0px 5px rgb(71, 71, 71);
+  box-shadow: 1px 1px 6px rgb(71, 71, 71);
   cursor: pointer;
   margin: 0 0.6rem;
   letter-spacing: 0.02em;
 }
 
 button#adherer {
-  background-color: steelblue;
+  background-color: hsl(207, 44%, 30%);
+}
+
+button#adherer:hover {
+  background-color: hsl(207, 44%, 52%);
+  box-shadow: 1px 1px 7px hsl(0, 0%, 10%);
 }
 
 button#donner {
-  background-color: rgb(87, 153, 87);
+  background-color: hsl(120, 27%, 30%);
+}
+
+button#donner:hover {
+  background-color: hsl(120, 27%, 50%);
+  box-shadow: 1px 1px 7px hsl(0, 0%, 10%);
 }
 
 /*----------- OBJECTIFS ------------ */
@@ -209,7 +223,7 @@ section#news {
 }
 
 #network i {
-  font-size: clamp(5rem, 6vw, 8rem);
+  font-size: clamp(2rem, 4vw, 8rem);
 }
 #network i:hover {
   transform: scale(1.2);
