--- a/style.css
+++ b/style.css
@@ -57,18 +57,35 @@ header ul li {
   justify-content: center;
   background: url("images/baniere.jpg") no-repeat center/cover;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3);
-  text-shadow: 0px 0px 5px rgb(71, 71, 71);
   text-shadow: 2px 2px 7px hsl(0, 0%, 10%);
+  font-family: "DM Serif Display", serif;
 }
 
 #bandeau-accueil:hover {
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
 }
 
+#bandeau-accueil:hover h2 {
+  text-shadow: 4px 4px 10px hsl(0, 0%, 5%);
+}
+
+#bandeau-accueil:hover #quote {
+  color: hsl(0, 0%, 100%);
+  text-shadow: 3px 3px 10px rgb(0, 0, 0);
+}
+
 #bandeau-accueil h2 {
-  font-size: clamp(2.5rem, 4.7vw, 4.5rem);
-  letter-spacing: 0.05em;
-  color: white;
+  font-size: clamp(2.5rem, 5vw, 5rem);
+  letter-spacing: 0.1em;
+  color: hsl(0, 0%, 100%);
+}
+
+#quote {
+  font-family: "Caveat", cursive;
+  font-size: clamp(1.2rem, 1.7vw, 4rem);
+  width: 85%;
+  text-align: center;
+  color: hsl(0, 0%, 75%);
 }
 
 .cta button {
@@ -79,7 +96,7 @@ header ul li {
   font-size: clamp(1rem, 1vw, 2rem);
   box-shadow: 1px 1px 6px rgb(71, 71, 71);
   cursor: pointer;
-  margin: 0 0.6rem;
+  margin: 2rem 0.8rem;
   letter-spacing: 0.02em;
 }
 
