--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,6 @@ body {
   margin: 0;
   color: rgb(68, 66, 66);
   font-size: clamp(1rem, 1vw, 2rem);
-  /* font-family: "Lato", Helvetica, sans-serif; */
   overflow-x: hidden;
 }
 
@@ -25,25 +24,8 @@ section footer {
   width: 100%;
 }
 
-/*----------- HEADER ------------ */
-
-header {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 auto;
-  padding-right: 5vw;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: whitesmoke;
-  box-shadow: 0px 0px 5px rgb(71, 71, 71);
-}
-
-header ul li {
-  display: inline;
-  margin: 5vw;
-  font-size: clamp(1.2rem, 1.2vw, 2rem);
+a[href*="index"] {
+  color: #d87639;
 }
 
 /*----------- BANDEAU PARTAGEN ------------ */
@@ -51,18 +33,19 @@ header ul li {
 #bandeau-accueil {
   width: 100%;
   height: 70vh;
+  padding: 4rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: url("images/baniere.jpg") no-repeat center/cover;
+  background: url("../images/baniere.jpg") no-repeat center/cover;
   box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.3);
   text-shadow: 2px 2px 7px hsl(0, 0%, 10%);
   font-family: "DM Serif Display", serif;
 }
 
 #bandeau-accueil:hover {
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.1);
 }
 
 #bandeau-accueil:hover h2 {
@@ -82,7 +65,7 @@ header ul li {
 
 #quote {
   font-family: "Caveat", cursive;
-  font-size: clamp(1.2rem, 1.7vw, 4rem);
+  font-size: clamp(1.8rem, 1.7vw, 4rem);
   width: 85%;
   text-align: center;
   color: hsl(0, 0%, 75%);
