--- a/css/contact.css
+++ b/css/contact.css
@@ -23,7 +23,10 @@ body {
   margin: 2rem;
   padding: 2.5rem;
   background-color: rgba(0, 0, 0, 0.4);
-  border: 1px solid rgb(214, 212, 212);
+  /* border: 2px solid rgb(214, 212, 212); */
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px #000;
+  box-shadow: 0px 0px 5px #fff;
   color: whitesmoke;
 }
 
